--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "qa-platform"
+name = "infonomy-server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
