--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "fastapi-users-db-sqlmodel>=0.3.0",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.116.0",
+    "instructor>=1.10.0",
+    "litellm>=1.74.12",
     "passlib[bcrypt]>=1.7.4",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
