--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi-users[sqlalchemy]>=14.0.1",
     "fastapi[standard]>=0.116.0",
     "instructor>=1.10.0",
+    "ipykernel>=6.30.1",
     "litellm>=1.74.12",
     "passlib[bcrypt]>=1.7.4",
     "python-jose[cryptography]>=3.5.0",
