--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "requests>=2.32.4",
     "sqlmodel>=0.0.24",
     "uvicorn>=0.35.0",
+    "jinja2>=3.1.0",
+    "aiofiles>=23.0.0",
 ]
